# cs4223-cache-sim

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  DomainModel.md  DomainModel.txt  README.md  generate_graphs.py  run_coherence.py
data/: test_0.data  test_1.data  test_2.data  test_3.data
output/: blackscholes_Dragon_1024_16_16.csv  blackscholes_Dragon_1024_16_32.csv  blackscholes_Dragon_1024_16_64.csv  blackscholes_Dragon_1024_1_1024.csv  blackscholes_Dragon_1024_1_128.csv  blackscholes_Dragon_1024_1_16.csv  blackscholes_Dragon_1024_1_256.csv  blackscholes_Dragon_1024_1_32.csv  blackscholes_Dragon_1024_1_512.csv  blackscholes_Dragon_1024_1_64.csv  blackscholes_Dragon_1024_2_128.csv  blackscholes_Dragon_1024_2_16.csv  blackscholes_Dragon_1024_2_256.csv  blackscholes_Dragon_1024_2_32.csv  blackscholes_Dragon_1024_2_512.csv  blackscholes_Dragon_1024_2_64.csv  blackscholes_Dragon_1024_32_16.csv  blackscholes_Dragon_1024_32_32.csv  blackscholes_Dragon_1024_4_128.csv  blackscholes_Dragon_1024_4_16.csv  blackscholes_Dragon_1024_4_256.csv  blackscholes_Dragon_1024_4_32.csv  blackscholes_Dragon_1024_4_64.csv  blackscholes_Dragon_1024_64_16.csv  blackscholes_Dragon_1024_8_128.csv  blackscholes_Dragon_1024_8_16.csv  blackscholes_Dragon_1024_8_32.csv  blackscholes_Dragon_1024_8_64.csv  blackscholes_Dragon_1048576_16_2048.csv  blackscholes_Dragon_1048576_1_1024.csv  blackscholes_Dragon_1048576_1_128.csv  blackscholes_Dragon_1048576_1_16.csv  blackscholes_Dragon_1048576_1_2048.csv  blackscholes_Dragon_1048576_1_256.csv  blackscholes_Dragon_1048576_1_32.csv  (+6329 more)
(+51 files in other folders)
